<package>
  <name>moveit_full_pr2</name>
  <version>0.3.0</version>
  <description>All MoveIt components, plugins and PR2-specific plugins</description>
  <author email="isucan@willowgarage.com">Ioan Sucan</author>
  <author email="sachinc@willowgarage.com">Sachin Chitta</author>

  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>moveit_full</build_depend>
  <build_depend>moveit_pr2</build_depend>

  <run_depend>moveit_full</run_depend>
  <run_depend>moveit_pr2</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
