<package>
  <name>moveit_source_build_deps</name>
  <version>0.3.0</version>
  <description>Brings in dependencies needed to compile MoveIt from source</description>
  <author email="isucan@willowgarage.com">Ioan Sucan</author>

  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>assimp</build_depend>
  <build_depend>boost</build_depend> 
  <build_depend>console_bridge</build_depend> 
  <build_depend>control_msgs</build_depend> 
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>eigen_stl_containers</build_depend>
  <build_depend>fcl</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>message_filters</build_depend> 
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>python</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>rosconsole_bridge</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>rqt</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend> 
  <build_depend>shape_tools</build_depend>
  <build_depend>srdfdom</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend> 
  <build_depend>urdf</build_depend>
  <build_depend>urdfdom</build_depend>
  <build_depend>warehouse_ros</build_depend>
  <build_depend>yaml-cpp</build_depend>


  <run_depend>actionlib</run_depend>
  <run_depend>assimp</run_depend>
  <run_depend>boost</run_depend> 
  <run_depend>console_bridge</run_depend> 
  <run_depend>control_msgs</run_depend> 
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>eigen_stl_containers</run_depend>
  <run_depend>fcl</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>manipulation_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>ompl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pkg-config</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>python</run_depend>
  <run_depend>random_numbers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>rosconsole_bridge</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rqt</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend> 
  <run_depend>shape_tools</run_depend>
  <run_depend>srdfdom</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend> 
  <run_depend>urdf</run_depend>
  <run_depend>urdfdom</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
