<package>
  <name>moveit_source_build_deps</name>
  <version>0.3.2</version>
  <description>Brings in dependencies needed to compile MoveIt from source</description>
  <author email="isucan@willowgarage.com">Ioan Sucan</author>

  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>assimp</run_depend>
  <run_depend>boost</run_depend> 
  <run_depend>console_bridge</run_depend> 
  <run_depend>control_msgs</run_depend> 
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>eigen_stl_containers</run_depend>
  <run_depend>fcl</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>manipulation_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>ompl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pkg-config</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>python</run_depend>
  <run_depend>random_numbers</run_depend>
  <run_depend>rosconsole_bridge</run_depend>
  <run_depend>ros_comm</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rqt</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend> 
  <run_depend>shape_tools</run_depend>
  <run_depend>geometry</run_depend>
  <run_depend>robot_model</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>libglew-dev</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
